# CSE-4302-Project

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  Toolchain-mingw64.cmake  academic_report.csv  academicmanager.cpp  academicmanager.hpp  admin.cpp  admin.hpp  asr_habit.txt  assets.qrc  attendence.txt  circularprogress.cpp  circularprogress.hpp  course.cpp  course.hpp  exceptions.hpp  grades.txt  habit.cpp  habit.hpp  how 53cd05b  main.code-workspace  main.cpp  mainwindow.cpp  mainwindow.hpp  notices.txt  person.cpp  person.hpp  replace_files.ps1  routine.cpp  routine.hpp  student.cpp  student.hpp  student_user.txt  teacher.cpp  teacher.hpp  teacher_users.txt  (+7 more)
.claude/: settings.local.json
.history/: CMakeLists_20260307220052.txt  CMakeLists_20260308103501.txt  main_20260307215952.cpp
.history/data/: themes_20260308095427.csv
.history/include/: databasemanager_20260307220052.hpp  exceptions_20260307214414.hpp  exceptions_20260307215644.hpp  logindialog_20260308101312.hpp  student_20260307213139.hpp  student_20260307213547.hpp  student_20260307213558.hpp  teacher_attendance_dialog_20260311025617.hpp
.history/src/: admin_20260310223040.cpp  admin_20260310223152.cpp  admin_20260310223154.cpp  course_20260307215705.cpp  logindialog_20260307221348.cpp  mainwindow_20260307222043.ui  student_20260307213118.cpp  student_20260307213655.cpp  teacher_20260307215627.cpp  teacher_attendance_dialog_20260311030122.cpp  ui_routine_20260308100012.cpp
CSE-4302-Project/: .gitignore  CMakeLists.txt  README.md
CSE-4302-Project/.history/data/: themes_20260307221320.csv
CSE-4302-Project/.history/include/: student_20260307213605.hpp
CSE-4302-Project/.history/src/: logindialog_new_20260308102615.cpp  student_20260307213634.cpp  student_20260307213640.cpp  student_20260307213659.cpp  student_20260307213707.cpp  theme_20260307221211.cpp
CSE-4302-Project/data/: attendance.csv  courses.csv  habits.csv  prayers.csv  queries.csv  routine.csv  students.csv  themes.csv
CSE-4302-Project/include/: appmanager.hpp  course.hpp  mainwindow.hpp  manager_academics.hpp  manager_notices.hpp  manager_prayers.hpp  manager_tasks.hpp  search_trie.hpp  teacher.hpp  ui_academics.hpp  ui_admin.hpp  utils.hpp
CSE-4302-Project/src/: appmanager.cpp  appmanager_analytics.cpp  csvdelegate.cpp  logindialog.cpp.old  mainwindow.cpp  mainwindow.cpp.backup  mainwindow.ui  manager_notices.cpp  manager_persons.cpp  theme.cpp  ui_academics.cpp  ui_admin.cpp  ui_planner.cpp  ui_queries.cpp  ui_timers.cpp  ~$inwindow.cpp  ~$inwindow.cpp.backup  ~$inwindow.ui  ~$nager_auth.cpp  ~$nager_habits.cpp  ~$nager_prayers.cpp  ~$pmanager.cpp  ~$vhandler.cpp
Habits/: Anika_habit.txt  asr_habit.txt
Student/: student.cpp
Student/Habit_Tracker/: habit.cpp  habit.h
assets/data/: admins.csv  assessments.csv  attendance.csv  courses.csv  enrollments.csv  grades.csv  habits.csv  lostandfound.csv  notices.csv  prayers.csv  queries.csv  routine.csv  students.csv  tasks.csv  teachers.csv
build-ucrt64/: build.ninja
build-ucrt64/Acadence_autogen/: deps  mocs_compilation.cpp
data/: admins.csv  assessments.csv  attendance.csv  courses.csv  habits.csv  messages.csv  notices.csv  prayers.csv  queries.csv  routine.csv  routine_adjustments.csv  students.csv  tasks.csv  teachers.csv  themes.csv
include/: academicmanager.hpp  admin.hpp  appmanager.hpp  assetmanager.hpp  attendance_simulator.hpp  chart_widget.hpp  command_history.hpp  commands.hpp  course.hpp  csvdelegate.hpp  csvhandler.hpp  custom_tables.hpp  exceptions.hpp  gpa_strategy.hpp  habit.hpp  icommand.hpp  logindialog.hpp  mainwindow.hpp  manager_academics.hpp  manager_auth.hpp  manager_community.hpp  manager_habits.hpp  manager_lostfound.hpp  manager_messages.hpp  manager_persons.hpp  manager_productivity.hpp  manager_queries.hpp  manager_routine.hpp  models.hpp  notice_decorators.hpp  notifications.hpp  person.hpp  personfactory.hpp  report.hpp  routine.hpp  student.hpp  student_iterator.hpp  teacher.hpp  theme.hpp  theme_toggle.hpp  (+15 more)
routines/: Kanetah_routine.txt  default_routine.txt
src/: academicmanager.cpp  admin.cpp  appmanager.cpp  appmanager_analytics.cpp  assetmanager.cpp  command_history.cpp  course.cpp  csvdelegate.cpp  csvhandler.cpp  custom_tables.cpp  databasemanager.cpp  habit.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  manager_academics.cpp  manager_auth.cpp  manager_community.cpp  manager_habits.cpp  manager_lostfound.cpp  manager_messages.cpp  manager_persons.cpp  manager_prayers.cpp  manager_productivity.cpp  manager_queries.cpp  manager_routine.cpp  manager_tasks.cpp  person.cpp  personfactory.cpp  routine.cpp  student.cpp  teacher.cpp  theme.cpp  timer.cpp  ui_academics.cpp  ui_admin.cpp  ui_calendar.cpp  ui_dashboard.cpp  ui_habits.cpp  (+13 more)
src/Admin/: Admin.cpp  Admin.hpp
src/App/: App.cpp  App.hpp  Person.hpp  User.hpp
src/Core/: Input.cpp  Input.hpp  Timer.hpp
src/Student/: Student.cpp  Student.hpp
src/Student/Habit_Tracker/: Habit_Tracker.cpp  Habit_Tracker.hpp
src/Student/HomePage/: HomePage.cpp  HomePage.hpp
src/Student/Routine/: Routine.cpp  routine.hpp
src/Teacher/: Teacher.cpp  Teacher.hpp
